@@ -1,14 +1,15 @@
 \header {
 
-texidoc = "Test file for the new chordname entry code: the suffixes are printed below the pitches."
+texidoc = "Test file for the new chordname entry code (@code{\chords}
+mode): the suffixes are printed below the pitches."
 
 }
 
 \score
 {
 \notes  { \context Voice \chords {
-c1_"1"
-c:7_"7"
+c1_"(nothing)"
+c:7_":7"
 c:m_":m"
 c:m7_":m7"
 c:aug_":aug"
@@ -19,6 +20,7 @@ c:sus4_":sus4"
 c:sus2_":sus2"
 c:6_":6"
 c:m6_":m6"
+c:7sus4_":7sus4"
 c:3-_":3-"
 c:3+_":3+"
 c:5+.3-_":5+.3-"
@@ -30,7 +32,10 @@ c:m13_":m13"
 c:7^5_":7\\^{ }5"
 c^3_"\\^{ }3"
 c/g_"/g"
+c/gis_"/gis"
+c/a_"/a"
 c/+f_"/+f"
+c/+g_"/+g"
 }
 }
 }
