@@ -12,6 +12,7 @@ chs = \notes
 <<c d e f g bes c'  d' e'>>1
 <<c e g bes c'  d' e'>>1
 <<c e g a bes>>1
+<<c e g a d'>>1
 }
 
 
